<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_item_selector">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/personIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:contentDescription="@string/icon_of_a_person"/>


        <TextView
            android:id="@+id/firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:text="@string/first_name"
            android:paddingRight="4dp"
            android:paddingLeft="4dp"/>


        <TextView
            android:id="@+id/lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@android:color/darker_gray"
            android:text="@string/last_name"
            android:paddingRight="4dp"
            android:paddingLeft="4dp"/>

    </LinearLayout>

</LinearLayout>